--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "projet-berix",
   "version": "1.0.0",
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.26.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.2",
